crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__add_auto_initializes_the_store.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"add\", \"-t\", \"decision\", \"-s\", \"S\", \"-c\", \"C\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] add -t decision -s S -c C
exit: 0
--- stdout ---
{
  "message": "Created memory [UUID]",
  "success": true
}
--- stderr ---
