crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__add_content_as_positional.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"add\", \"-t\", \"convention\", \"-s\", \"Quick start form\",\n\"Positional content.\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] add -t convention -s Quick start form Positional content.
exit: 0
--- stdout ---
{
  "message": "Created memory [UUID]",
  "success": true
}
--- stderr ---
