crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__add_minimal.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"add\", \"-t\", \"decision\", \"-s\", \"A decision\", \"-c\", \"Because.\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] add -t decision -s A decision -c Because.
exit: 0
--- stdout ---
{
  "message": "Created memory [UUID]",
  "success": true
}
--- stderr ---
