crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__add_missing_args_non_tty_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"add\", \"-t\", \"decision\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] add -t decision
exit: 1
--- stdout ---
--- stderr ---
Error: Missing required arguments: --content, --summary. Provide all required flags or run from an interactive terminal.
