crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__delete_existing.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"delete\", &id, \"--force\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] delete [UUID] --force
exit: 0
--- stdout ---
{
  "message": "Deleted memory [UUID]",
  "success": true
}
--- stderr ---
