crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__delete_unknown_id_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"delete\", \"no-such-memory\", \"--force\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] delete no-such-memory --force
exit: 1
--- stdout ---
--- stderr ---
Error: Memory not found: no-such-memory
